# helmor-windows

./: .env.example  .env.release.local.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SDK_MESSAGE_COVERAGE.md  biome.json  components.json  helmor.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vite.e2e.config.ts
.changeset/: README.md  (+69 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: .agents.rs.pending-snap  agents.rs  conductor.rs  data_dir.rs  dev_api.rs  error.rs  image_store.rs  import.rs  lib.rs  logging.rs  mcp.rs  schema.rs  service.rs  shell_env.rs  sidecar.rs  testkit.rs
src-tauri/src/agents/: .streaming.rs.pending-snap  action_kind.rs  builtin_claude_providers.rs  catalog.rs  custom_providers.rs  persistence.rs  queries.rs  slash_commands.rs  streaming.rs  support.rs
src-tauri/src/cli/: args.rs  conductor.rs  data.rs  files.rs  github.rs  mod.rs  output.rs  refs.rs  repo.rs  scripts.rs  send.rs  session.rs  settings.rs  system.rs  workspace.rs
src-tauri/src/commands/: common.rs  conductor_commands.rs  editor_commands.rs  editors.rs  forge_commands.rs  github_commands.rs  mod.rs  repository_commands.rs  script_commands.rs  session_commands.rs  settings_commands.rs  system_commands.rs  terminal_commands.rs  workspace_commands.rs
src-tauri/src/conductor/: db.rs  git_ops.rs  helpers.rs  mod.rs  repos.rs  sessions.rs  settings.rs  workspaces.rs
src-tauri/src/forge/: bundled.rs  cli_status.rs  command.rs  detect.rs  mod.rs  provider.rs  remote.rs  status_cache.rs  types.rs  workspace.rs
src-tauri/src/git/: ops.rs  watcher.rs
src-tauri/src/github/: auth.rs  cli.rs  graphql.rs
src-tauri/src/models/: auth.rs  db.rs  git_ops.rs  github_cli.rs  helpers.rs  mod.rs  repos.rs  sessions.rs  settings.rs  workspaces.rs
src-tauri/src/pipeline/: classify.rs  collapse.rs  event_filter.rs  mod.rs  types.rs
src-tauri/src/rate_limits/: claude.rs  codex.rs  mod.rs  throttle.rs
src-tauri/src/ui_sync/: events.rs  manager.rs  mod.rs  socket.rs
src-tauri/src/updater/: mod.rs  tests.rs
src-tauri/src/workspace/: archive.rs  branching.rs  helpers.rs  lifecycle.rs  mod.rs  pr_sync.rs  scripts.rs  scripts_windows_stub.rs  status.rs  workspaces.rs
src-tauri/tests/: .stream_bridge_elicitation.rs.pending-snap  agent_stream_event_wire.rs  pipeline_scenarios.rs  pipeline_streams.rs  schema_migrations.rs  stable_part_ids.rs  stream_bridge_elicitation.rs  stream_bridge_events.rs  streaming_send_params.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/snapshots/: agent_stream_event_wire__wire_format_aborted.snap  agent_stream_event_wire__wire_format_deferred_tool_use.snap  agent_stream_event_wire__wire_format_done.snap  agent_stream_event_wire__wire_format_elicitation_request.snap  agent_stream_event_wire__wire_format_error.snap  agent_stream_event_wire__wire_format_permission_request.snap  agent_stream_event_wire__wire_format_plan_captured.snap  agent_stream_event_wire__wire_format_streaming_partial.snap  agent_stream_event_wire__wire_format_update.snap  pipeline_fixtures__pipeline_fixtures@claude_large_collapse__input.json.snap  pipeline_fixtures__pipeline_fixtures@codex_commits__input.json.snap  pipeline_fixtures__pipeline_fixtures@codex_reviewer__input.json.snap  pipeline_fixtures__pipeline_fixtures@schedule_fetch__input.json.snap  pipeline_fixtures__pipeline_fixtures@small_chat_claude__input.json.snap  pipeline_streams__stream_replay@codex__context-compaction-item.jsonl.snap  pipeline_streams__stream_replay@codex__thread-compacted.jsonl.snap  (+11 more)
(+513 files in other folders)
