[package]
name = "helmor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "helmor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "helmor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
dotenvy = "0.15"
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.10.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4"] }

[features]
dev-server = ["dep:axum", "dep:futures-core", "dep:tokio", "dep:tower-http"]

[dependencies.axum]
version = "0.8"
optional = true

[dependencies.futures-core]
version = "0.3"
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[dependencies.tower-http]
version = "0.6"
features = ["cors"]
optional = true

[[bin]]
name = "helmor-dev-server"
path = "src/bin/dev_server.rs"
required-features = ["dev-server"]

[dev-dependencies]
tempfile = "3"
