[package]
name = "helmor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "helmor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "helmor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
dotenvy = "0.15"
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flate2 = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.10.0"

# Used for sending SIGTERM to the sidecar child during graceful shutdown.
# `std::process::Child::kill()` is SIGKILL only and gives the process no
# chance to flush or clean up its own children.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-mcp-bridge = "0.11.0"
tauri-plugin-opener = "2"
notify = "7"
notify-debouncer-full = "0.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "helmor-cli"
path = "src/bin/helmor-cli.rs"

[[bin]]
name = "gen_pipeline_fixture"
path = "src/bin/gen_pipeline_fixture.rs"

[dev-dependencies]
insta = { version = "1", features = ["yaml", "glob"] }
tempfile = "3"
